# FlowCyPy

./: .buildinfo  .condarc  .coverage  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  README.md  README.rst  Untitled.ipynb  code.html  data.json  endpoint.json  genindex.html  index.html  makefile  meta.yaml  notebook.ipynb  objects.inv  pyproject.toml  pytest.ini  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html  version_switcher.json
.doctrees/: code.doctree  environment.pickle  index.doctree  references.doctree  sg_execution_times.doctree  theory.doctree
FlowCyPy/: __init__.py  _detector_instances.py  _flow_cytometer_instances.py  _population_instances.py  _version.py  acquisition.py  ai_dev.py  amplifier.py  analyzer.py  calibration.py  circuits.py  classifier.py  continuous_acquisition.py  coupling.py  coupling_model.py  cytometer.py  dataframe_subclass.py  dataset.py  detector.py  dev.py  digitizer.py  directories.py  event_collection.py  event_correlator.py  event_frame.py  experiment.py  filters.py  flow.py  flow_cell.py  flow_cytometer.py  fluid_region.py  fluidics.py  fluorescence.py  fluorescence_labels.py  fraction_selection.py  helper.py  instances.py  joint_plot.py  logger.py  noises.py  (+25 more)
FlowCyPy/cpp/circuits/: CMakeLists.txt  circuits.cpp  circuits.h  interface.cpp
FlowCyPy/cpp/classifier/: CMakeLists.txt  classifier.h  interface.cpp
FlowCyPy/cpp/core/: CMakeLists.txt  core.cpp  core.h  interface.cpp
FlowCyPy/cpp/deprecated/cpp_deprecated/core/: CMakeLists.txt  core.cpp  core.h  interface.cpp
FlowCyPy/cpp/deprecated/cpp_deprecated/filter/: CMakeLists.txt  filter.cpp  filter.h
FlowCyPy/cpp/deprecated/cpp_deprecated/peak_locator/: CMakeLists.txt  interface.cpp
FlowCyPy/cpp/deprecated/cpp_deprecated/utils/: CMakeLists.txt  interface.cpp  utils.h
FlowCyPy/cpp/digital_processing/peak_locator/: CMakeLists.txt  cmake_install.cmake  interface.cpp  peak_locator.cpp  peak_locator.h
FlowCyPy/cpp/digital_processing/trigger/: CMakeLists.txt  cmake_install.cmake
FlowCyPy/cpp/distributions/: CMakeLists.txt  distributions.cpp  distributions.h  interface.cpp
FlowCyPy/cpp/dummy/: CMakeLists.txt  interface.cpp
FlowCyPy/cpp/flow_cell/: CMakeLists.txt  flow_cell.cpp  flow_cell.h  interface.cpp
FlowCyPy/cpp/fluidics/distributions/: CMakeLists.txt  cmake_install.cmake  detail.h  distributions.cpp  interface.cpp
FlowCyPy/cpp/opto_electronics/amplifier/: CMakeLists.txt  amplifier.cpp  amplifier.h  interface.cpp
FlowCyPy/cpp/opto_electronics/coupling/: CMakeLists.txt  coupling.h  interface.cpp
FlowCyPy/cpp/opto_electronics/digitizer/: CMakeLists.txt  digitizer.cpp  digitizer.h  interface.cpp
FlowCyPy/cpp/opto_electronics/source/: CMakeLists.txt  interface.cpp  source.cpp  source.h
FlowCyPy/cpp/peak_locator/: CMakeLists.txt  interface.cpp  peak_locator.cpp  peak_locator.h  peak_utils.h
FlowCyPy/cpp/pint/: CMakeLists.txt  cmake_install.cmake  pint.cpp  pint.h
FlowCyPy/cpp/signal_generator/: CMakeLists.txt  cmake_install.cmake  interface.cpp  signal_generator.cpp  signal_generator.h  test_fftw.cpp
FlowCyPy/cpp/signal_processing/circuits/: CMakeLists.txt  circuits.cpp  circuits.h  cmake_install.cmake  interface.cpp
FlowCyPy/cpp/signal_processing/trigger/: CMakeLists.txt
FlowCyPy/cpp/signal_processing/triggering_system/: CMakeLists.txt  interface.cpp  threshold.h  triggering_system.cpp  triggering_system.h
FlowCyPy/cpp/trigger/: CMakeLists.txt  interface.cpp  trigger.cpp  trigger.h
FlowCyPy/cpp/triggering_system/: CMakeLists.txt  interface.cpp  trigger.cpp  triggering_system.cpp  triggering_system.h
FlowCyPy/cpp/utils/: CMakeLists.txt  casting.h  cmake_install.cmake  constants.h  interface.cpp  numpy.h  utils.cpp  utils.h
FlowCytometry/: __init__.py  _version.py  flow_cytometer.py  gaussian_pulse.py  peak.py  pulse_analyzer.py  utils.py
_modules/: index.html
_sources/: code.rst.txt  references.rst.txt  sg_execution_times.rst.txt  theory.rst.txt
code/: base.html  distributions.html  peak_finder.html
development/: _test_workflow.py  gamma_vs_explicit.py
developments/: AI_peak_analysis.ipynb  Deep_peak_square.ipynb  Physics-informed_AI.ipynb  ROI_analysis-Copy1.ipynb  ROI_analysis.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  ai_dev2.ipynb  beads_analysis.py  best_model.h5  best_model.keras  concentration_validation.py  dev_beads_analysis.py  dev_canto.py  dev_classifier.py  dev_shot_noise_check.py  dev_study_on_ri.py  dev_test_0.py  dev_test_1.py  get_started.md  get_started.rst  output_file.prof
gallery/: density_1_plot.html  density_2_populations.html  density_3_plot.html  distributions.html  flow_cytometer_signal.html  full_workflow.html  index.html  plot_density_1_plot.html  plot_density_2_populations.html  plot_density_3_plot.html  plot_density_plot.html  plot_distributions.html  plot_flow_cytometer_signal.html  plot_full_workflow.html  plot_gaussian_pulse.html  plot_pulse_analysis.html  plot_scatterer_distribution.html  scatterer_distribution.html  sg_execution_times.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_049c8760bcafd8ec_flow_cytometer_py.html  z_049c8760bcafd8ec_gaussian_pulse_py.html  z_049c8760bcafd8ec_peak_py.html  z_049c8760bcafd8ec_pulse_analyzer_py.html  z_049c8760bcafd8ec_utils_py.html  z_112c960afe843727_base_class_py.html  z_112c960afe843727_basic_py.html  z_112c960afe843727_moving_average_py.html  z_112c960afe843727_threshold_py.html  z_2404691b0fd86af0__detector_instances_py.html  z_2404691b0fd86af0__flow_cytometer_instances_py.html  z_2404691b0fd86af0__joint_plot_py.html  z_2404691b0fd86af0__peak_py.html  z_2404691b0fd86af0__population_instances_py.html  z_2404691b0fd86af0_acquisition_py.html  z_2404691b0fd86af0_amplifier_py.html  z_2404691b0fd86af0_analyzer_py.html  z_2404691b0fd86af0_calibration_py.html  z_2404691b0fd86af0_circuits_py.html  z_2404691b0fd86af0_classifier_py.html  z_2404691b0fd86af0_continuous_acquisition_py.html  z_2404691b0fd86af0_coupling_mechanism_py.html  (+99 more)
(+8067 files in other folders)
